# aws-ses-template-manager

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api_requests/: template_request.py
config/: settings.py
controllers/: email_content_generation_controller.py  email_sender_controller.py  template_controller.py
requests/: bulk_raw_email_request.py  generate_email_content_request.py  template_request.py
resources/email_templates/: alert.json
responses/: generated_email_response.py
services/: aws_client.py  bulk_raw_email_service.py  email_content_generation_service.py  template_service.py
services/llm/: openai_client.py  prompt_builder.py
services/providers/: file_based_email_template_provider.py
