[project]
name = "aws-ses-template-manager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.23,<1.0",
    "pydantic>=2.0,<3.0",
    "boto3>=1.28,<2.0",
    "python-multipart>=0.0.6",
    "openai>=1.0,<2.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "pydantic-settings>=2.12.0",
]
